fixed mobile media query, and legibility, projects specing next

--- a/styles/sass/_media-queries.scss
+++ b/styles/sass/_media-queries.scss
@@ -2,54 +2,9 @@
 
 @media screen and (max-width: 1100px) {
   /* all of our styles for smaller DESKTOP devices will go within this breakpoint */
-  #home {
-    .row {
-      .text {
-        h5 {
-          font-size: 2vw;
-        }
-      }
-    }
-
-    #imagery {
-      margin-top: 0;
-
-      .img-left h1 {
-        font-size: 3.4vw;
-      }
-    }
-  }
-
-  #projects {
-    .services {
-      .serviceDetails {
-        font-size: 4vw;
-      }
-
-      div {
-        h1 {
-          font-size: 4vw;
-        }
-      }
-    }
-
-    .skills {
-      .set {
-        li {
-          i {
-            font-size: 2rem;
-          }
-
-          p {
-            font-size: 0.8rem;
-          }
-        }
-      }
-    }
-  }
 }
 
-@media screen and (max-width: 395px), screen and (max-height: 855px) {
+@media screen and (max-width: 425px) {
   #home {
     .row {
       .text {
@@ -69,6 +24,8 @@
   }
 
   #projects {
+    padding-top: 0px;
+
     .services {
       .serviceDetails {
         font-size: 4vw;
@@ -84,13 +41,43 @@
     .skills {
       .set {
         li {
-          i {
-            font-size: 2rem;
+          .fa-brands,
+          .fa-solid {
+            font-size: 5vw;
           }
 
           p {
-            font-size: 0.8rem;
+            font-size: 6vw;
+            letter-spacing: 1.5px;
+            text-transform: uppercase;
+            color: #333;
           }
+        }
+      }
+    }
+
+    .projects-wrap {
+      .project-row {
+        margin-top: 5vh;
+      }
+    }
+  }
+
+  #about {
+    height: 80vh;
+  }
+
+  #contact {
+    .wrapper {
+      display: flex;
+      flex-direction: column;
+      div.contact-info {
+        font-size: 3vw;
+      }
+      .social-icons {
+        font-size: 3vw;
+        .fab {
+          font-size: 5vw;
         }
       }
     }
@@ -99,5 +86,5 @@
   /* all of our styles for MOBILE devices will go within this breakpoint */
 }
 
-@media screen and (max-width: 500px), screen and (max-height: 490px) {
-}
+// @media screen and (max-width: 500px), screen and (max-height: 490px) {
+// }
